# industry-day-demo

./: .gitignore  lesson.ipynb  pyproject.toml
app/: app.py  training.py
app/static/: style.css
app/static/js/: script.js  test-script.js
app/template/: home.html  index.html  test.html
demo/: get_heartbeat.py  run.py
heartbeat/: get_heartbeat.py  model.py  run.py
heartbeat/pulse_sensor_data/: pulse_sensor_data.ino
neural_network_lesson/: lesson.ipynb  plot.py  training.py
