[tool.poetry]
name = "app"
version = "0.1.0"
description = "Initial Machine Learning Demo for Industry Day 2025."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
flaskwebgui = "^1.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
